--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
 
         <!-- need to include phaser to create game object -->
 		<script type="text/javascript" src="phaser.js"></script>
+        <!-- add more .js gamestate files here -->
+        <script type = "text/javascript" src = "boot.js"></script>
+        <script type = "text/javascript" src = "load.js"></script>
+        <script type = "text/javascript" src = "menu.js"></script>
+        <script type = "text/javascript" src = "play.js"></script>
         <script type="text/javascript" src="main.js"></script>
+        
         <link rel="stylesheet" type="text/css" href="main.css">
 	</head>
 
